# MarlinBaboon

./: CMakeLists.txt  init_MarlinBaboon.sh
cmake/Modules/: FindBaboon.cmake
config/: Algorithm.cfg  OverlayEvent.cfg  ShowerAgglomerationAlgorithm.cfg  ShowerProcessorAlgorithm.cfg  TrackFinderAlgorithm.cfg
marlinXml/: EnergyMinimizerProcessor.xml  EventDisplay.xml  SDHCALgeom.xml  ShowerAgglomeration.xml  ShowerProcessor.xml  ShowerSplitter.xml  TestBeamCuts.xml  TrackFinder.xml
source/: CMakeLists.txt
source/include/: CutProcessor.hh  EnergyMinimizerProcessor.hh  MonitoringTestProcessor.hh  OverlayEstimatorProcessor.hh  ShowerAgglomerationProcessor.hh  ShowerProcessor.hh  ShowerSplitterProcessor.hh  TestBeamCutsProcessor.hh  TrackFinderProcessor.hh
source/main/: ClusteringAnalysis.cc  CoreAnalysis.cc  OverlayEstimator.cc
source/src/: CutProcessor.cc  EnergyMinimizerProcessor.cc  MonitoringTestProcessor.cc  OverlayEstimatorProcessor.cc  ShowerAgglomerationProcessor.cc  ShowerPDFProcessor.cc  ShowerProcessor.cc  ShowerSplitterProcessor.cc  TestBeamCutsProcessor.cc  TrackFinderProcessor.cc
